# kohdalab-paperbot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  ask_ollama.py  bot.py  docker-compose.nas.yml  docker-compose.portainer.yml  docker-compose.stack-local.yml  pyproject.toml  requirements.txt
.github/: release.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DS920_DEPLOY.md  GIT_WORKFLOW.md  PORTAINER_DEPLOY.md
rag_poc/: .env.example  .gitignore  README.md  ask.py  ingest.py  lab_profile.py  ollama_client.py  paper_watch.py  sync_notify.py  zotero_sync.py
scripts/: benchmark_ollama_models.py  cleanup_slack_channel.py  cleanup_slack_channel.sh  collect_paper_watch.sh  deploy_nas.sh  reindex_nas.sh  report_paper_watch.sh  run_paper_watch.sh  sync_zotero_pipeline.sh
