[project]
name = "kohdalab-paperbot"
version = "0.2.0"
description = "DS920+ and local-LLM paper knowledge platform for KohdaLab"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "pymupdf>=1.27.2.3",
    "slack-bolt>=1.28.0",
    "slack-sdk>=3.42.0",
    "websocket-client>=1.9.0",
]
